--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,81 @@
-name: Deploy Spring Boot Application to Azure App Service on Azure
+name: Build and Deploy to AKS
  
 on:
   push:
     branches:
-      - main  # Change this to the branch you want to trigger the workflow
+      - main
  
 jobs:
-  build-and-deploy:
-    runs-on: windows-latest
+  build:
+    runs-on: ubuntu-latest
  
     steps:
-    # Step 1: Checkout the code
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
  
-    # Step 2: Set up Java JDK
-    - name: Set up Java JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'  # Use Java 17 (update if needed)
-        distribution: 'temurin'  # Use 'temurin' (formerly AdoptOpenJDK)
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '23'
+          distribution: 'temurin'
+          java-package: 'jdk'
  
-    # Step 3: Cache Maven dependencies for faster builds
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn clean install
  
-    # Step 4: Build the Spring Boot application
-    - name: Build with Maven
-      run: mvn clean package -DskipTests  # Use Gradle if you're not using Maven
+      - name: Log in to Azure Container Registry
+        uses: azure/docker-login@v2
+        with:
+          login-server: manicontainer.azurecr.io
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
  
-    # Step 5: Deploy to Azure Web App using the publish profile
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'talents-backend'  # Replace with your Azure Web App name
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}  # Store your Azure publish profile as a secret
-        package: target/*.jar  # Path to the built JAR file (or WAR file if applicable)
+      - name: Build and push Docker image
+        id: build-image
+        run: |
+          IMAGE_TAG=$(git rev-parse --short HEAD)
+          docker build -t manicontainer.azurecr.io/chm80076/backendcode:latest .
+          docker push manicontainer.azurecr.io/chm80076/backendcode:latest
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+ 
+    outputs:
+      image-tag: ${{ steps.build-image.outputs.IMAGE_TAG }}
+ 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+ 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+ 
+      - name: Authenticate with Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+ 
+      - name: Set AKS context
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: ramya5
+          cluster-name: ramyaaks
+ 
+      - name: Deploy to AKS
+        run: |
+          # Replace <IMAGE_TAG> in deployment.yaml with the actual image tag
+          sed -i "s|latest|${{ needs.build.outputs.image-tag }}|g" /home/runner/work/automationProcess/automationProcess/k8s/deployment.yaml
+ 
+          # Apply Kubernetes manifests
+          kubectl apply -f /home/runner/work/automationProcess/automationProcess/k8s/deployment.yaml --validate=false
+          kubectl apply -f /home/runner/work/automationProcess/automationProcess/k8s/service.yaml --validate=false
+ 
+          # Wait for deployment to complete
+          kubectl rollout status deployment/java-backend-deployment-mani --timeout=300s || true
+ 
+      - name: Debug Pod Status (if rollout fails)
+        if: ${{ failure() }}  # Only run if the previous step fails
+        run: |
+          echo "Debugging failed deployment..."
+          kubectl get pods -l app=java-backend
+          kubectl describe pod -l app=java-backend
+          kubectl logs -l app=java-backend
