--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
                 <configuration>
                     <source>22</source>
                     <target>22</target>
+                         <compilerArgs> <arg>--enable-preview</arg> </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
